# glintlock-tauri

./: .gitignore  CLAUDE.md  README.md  glintlock-architecture.md  glintlock-wireframe-v1.html  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnalyticsView.tsx  BottomBar.tsx  CampaignView.tsx  CharacterView.tsx  ChatView.tsx  GMScreenView.tsx  MediaView.tsx
src/data/: mock.ts  types.ts
src/lib/: opencode.ts  world-loader.ts  world-parser.ts  world-state.tsx
