[package]
name = "glintlock"
version = "0.1.0"
description = "Glintlock — Solo TTRPG Campaign Engine"
authors = ["you"]
edition = "2021"

[lib]
name = "glintlock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "glintlock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
